# erebos

./: .gitignore  CHANGELOG.md  LICENSE  README.md  chatroom.test  common.et  contact.et  deferred.et  discovery.et  discovery.test  erebos-tester.yaml  erebos.cabal  graph.et  invite.et  message.et  minici.yaml  network.et  network.test  storage.et  storage.test
main/: Main.hs  State.hs  Terminal.hs  Test.hs  Version.hs  WebSocket.hs
main/Test/: Service.hs
main/Version/: Git.hs
src/: Attach.hs  Channel.hs  Contact.hs  Discovery.hs  Flow.hs  ICE.chs  Identity.hs  Main.hs  Message.hs  Network.hs  Network.hs-boot  Pairing.hs  PubKey.hs  Service.hs  Set.hs  State.hs  Storage.hs  Sync.hs  Test.hs  Util.hs
src/Erebos/: Attach.hs  Channel.hs  Chatroom.hs  Contact.hs  Conversation.hs  DirectMessage.hs  Discovery.hs  Error.hs  Flow.hs  ICE.chs  Identity.hs  Invite.hs  Message.hs  Network.hs  Network.hs-boot  Object.hs  Pairing.hs  PubKey.hs  Service.hs  Set.hs  State.hs  Storable.hs  Storage.hs  Sync.hs  TextFormat.hs  UUID.hs  Util.hs
src/Erebos/Conversation/: Class.hs
src/Erebos/ICE/: pjproject.c  pjproject.h
src/Erebos/Network/: Address.hs  Channel.hs  Protocol.hs  Protocol.hs-boot  ifaddrs.c  ifaddrs.h
src/Erebos/Object/: Deferred.hs  Internal.hs
src/Erebos/Service/: Stream.hs
src/Erebos/Storable/: Internal.hs
src/Erebos/Storage/: Backend.hs  Disk.hs  Graph.hs  Head.hs  Internal.hs  Key.hs  List.hs  Memory.hs  Merge.hs
src/Erebos/TextFormat/: Ansi.hs  Types.hs
src/ICE/: pjproject.c  pjproject.h
src/Message/: Service.hs
src/Network/: Protocol.hs  ifaddrs.h
src/Storage/: Internal.hs  Key.hs  List.hs  Merge.hs
src/unix/Erebos/Storage/: Platform.hs
src/windows/Erebos/Storage/: Platform.hs
test/: attach.et  attach.test  chatroom.et  chatroom.test  common.et  contact.test  deferred.et  discovery.et  discovery.test  graph.et  invite.et  message.et  message.test  network.et  network.test  storage.et  storage.test  sync.et  sync.test
